# FlatBufferInstrumentProtocol

./: .gitignore  .gitmodules  README.md  instrument_protocol.fbs
Host/: Host.csproj  Program.cs
Host.Tests/: CommunicatorTests.cs  Host.Tests.csproj  InstrumentHostTests.cs
Host/InstrumentProtocol/: Command.cs  CommandCode.cs  Configuration.cs  Measurement.cs  Message.cs  MessageType.cs
MsvcInstrument/: CMakeLists.txt  instrument.c
MsvcInstrument/InstrumentProtocol/: instrument_protocol_builder.h  instrument_protocol_reader.h  instrument_protocol_verifier.h
MsvcInstrument/cff/: cff.h
STM32Instrument/: .gdbinit  .mxproject  CMakeLists.txt  STM32F100XX_FLASH.ld  STM32Instrument.ioc
STM32Instrument/Core/Inc/: main.h
STM32Instrument/Core/Src/: main.c
STM32Instrument/cff/: cff.c
STM32Instrument/cmake/: gcc-arm-none-eabi.cmake
STM32Instrument/cmake/stm32cubemx/: CMakeLists.txt
